src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>dfsle__GeneratedFileFormat__c</fullName>
        <label>Generated File Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Word</fullName>
                    <default>true</default>
                    <label>Word</label>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__GeneratedFileName__c</fullName>
        <label>Generated File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__GeneratedFileSuffix__c</fullName>
        <label>Generated File Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>name</fullName>
                    <default>true</default>
                    <label>name</label>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
                <value>
                    <fullName>name_date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__Rule__c</fullName>
        <description>JSON mapping for storing Document Generation rule helpful in implementing Conditional Template
        generation.</description>
        <label>Rule</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__File_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>File Type</label>
        <referenceTo>inscor__File_Type__c</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>